--- a/resources/assets/sass/publicacionesAdminlist.scss
+++ b/resources/assets/sass/publicacionesAdminlist.scss
@@ -22,3 +22,76 @@
 
 .btn-glyphicon { padding:8px; background:#ffffff; margin-right:4px; }
 .icon-btn { padding: 1px 15px 3px 2px; border-radius:50px;}
+
+.preview-images-zone {
+    width: 100%;
+    max-height: 100%;
+    padding: 5px 5px 0px 5px;
+    position: relative;
+    overflow: auto;
+}
+.preview-images-zone > .preview-image:first-child {
+    height: auto;
+    width: 185px;
+    position: relative;
+    margin-right: 5px;
+}
+.preview-images-zone > .preview-image {
+    height: auto;
+    width: 90px;
+    position: relative;
+    margin-right: 5px;
+    float: left;
+    margin-bottom: 5px;
+    object-fit: cover;
+}
+.preview-images-zone > .preview-image > .image-zone {
+    width: 100%;
+    height: auto;
+}
+.preview-images-zone > .preview-image > .image-zone > img {
+    width: 100%;
+    height: auto;
+}
+.preview-images-zone > .preview-image > .tools-edit-image {
+    position: absolute;
+    z-index: 100;
+    color: #fff;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+    display: none;
+}
+.preview-images-zone > .preview-image > .image-cancel {
+    font-size: 18px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-weight: bold;
+    margin-right: 0;
+    cursor: pointer;
+    display: none;
+    z-index: 100;
+}
+.preview-image:hover > .image-zone {
+    cursor: move;
+    opacity: .5;
+}
+.preview-image:hover > .tools-edit-image,
+.preview-image:hover > .image-cancel {
+    display: block;
+}
+.ui-sortable-helper {
+    width: 90px !important;
+    height: 90px !important;
+}
+
+a.button-upload {
+	border: 1px solid red;
+    padding: 2rem;
+}
+
+div.button-upload {
+	margin-bottom: 6rem;
+}
